--- a/cards4.html
+++ b/cards4.html
@@ -14,10 +14,11 @@
 
 <body>
     <section class="section">
-        <a href=""><video class="section__background-video" src="./video/marine.mp4" autoplay muted loop></video></a>
+        <video class="section__background-video" src="./video/marine.mp4" autoplay muted loop></video>
         <h1 class="section__title">Marine</h1>
         <p class="section__paragraph">the lives acuatic is magnificent in the world!</p>
-        <a href="" class="section__cta">browse</a>
+        <a href="https://www.visitsealife.com/sydney/" target="_blank"   class="section__cta">browse</a>
+        <audio src="./audio/Spandau Ballet - True (HD Remastered).mp3" autoplay loop></audio>
     </section>
 </body>
 
